# quickmaths

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: external-assets-handler.dart  main.dart
lib-ai/: CMakeLists.txt  build-android.zsh
lib-ai/include/: ai.hpp  quickmaths.hpp
lib-ai/onnx/include/: provider_options.h
lib-ai/onnx/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
lib-ai/onnx/lib/libonnxruntime.1.21.0.dylib.dSYM/Contents/: Info.plist
lib-ai/onnx/lib/pkgconfig/: libonnxruntime.pc
lib-ai/src/: ai.cpp  quickmaths.cpp
lib-ai/tests/: test.cpp
test/: widget_test.dart
